fix: comment section overflow

--- a/smile/src/components/post-components/side-content/index.module.css
+++ b/smile/src/components/post-components/side-content/index.module.css
@@ -11,19 +11,9 @@
     flex-direction: column;
     height: 80%;
     border-bottom: 1px solid rgb(205, 205, 205);
+    overflow: auto;
 }
 
 .actions {
     padding: 1rem;
-}
-
-.comment {
-    padding: 1rem;
-    display: flex;
-    align-items: center;
-    font-size: 12px;
-}
-
-.comment img {
-    margin-right: 14px;
 }
